using System;
using Microsoft.EntityFrameworkCore.Migrations;

#nullable disable

namespace Crm.Migrations;

/// <inheritdoc />
public partial class Init : Migration
{
    /// <inheritdoc />
    protected override void Up(MigrationBuilder migrationBuilder)
    {
        migrationBuilder.CreateTable(
            name: "clients",
            columns: table => new
            {
                Id = table.Column<Guid>(type: "uuid", nullable: false),
                ExternalId = table.Column<string>(type: "text", nullable: false),
                Name = table.Column<string>(type: "text", nullable: false),
                Age = table.Column<int>(type: "integer", nullable: false),
                Gender = table.Column<string>(type: "text", nullable: false),
                Location = table.Column<string>(type: "text", nullable: false),
                PreviousPurchases = table.Column<int>(type: "integer", nullable: false),
                FrequencyOfPurchases = table.Column<string>(type: "text", nullable: false),
                CreatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UpdatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: true)
            },
            constraints: table =>
            {
                table.PrimaryKey("PK_clients", x => x.Id);
            });

        migrationBuilder.CreateTable(
            name: "products",
            columns: table => new
            {
                Id = table.Column<Guid>(type: "uuid", nullable: false),
                Name = table.Column<string>(type: "character varying(200)", maxLength: 200, nullable: false),
                Category = table.Column<string>(type: "text", nullable: false),
                Color = table.Column<string>(type: "text", nullable: true),
                Size = table.Column<string>(type: "text", nullable: true),
                BasePrice = table.Column<decimal>(type: "numeric(18,2)", precision: 18, scale: 2, nullable: false),
                IsActive = table.Column<bool>(type: "boolean", nullable: false),
                CreatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UpdatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: true)
            },
            constraints: table =>
            {
                table.PrimaryKey("PK_products", x => x.Id);
            });

        migrationBuilder.CreateTable(
            name: "roles",
            columns: table => new
            {
                Id = table.Column<Guid>(type: "uuid", nullable: false),
                Name = table.Column<string>(type: "text", nullable: false),
                Description = table.Column<string>(type: "text", nullable: true),
                CreatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UpdatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: true)
            },
            constraints: table =>
            {
                table.PrimaryKey("PK_roles", x => x.Id);
            });

        migrationBuilder.CreateTable(
            name: "sales_forecasts",
            columns: table => new
            {
                Id = table.Column<Guid>(type: "uuid", nullable: false),
                ClientId = table.Column<Guid>(type: "uuid", nullable: false),
                ForecastDateUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                PeriodStartUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                PeriodEndUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                PredictedAmount = table.Column<decimal>(type: "numeric(18,2)", precision: 18, scale: 2, nullable: false),
                ConfidenceScore = table.Column<decimal>(type: "numeric(5,4)", precision: 5, scale: 4, nullable: true),
                ModelVersion = table.Column<string>(type: "text", nullable: true),
                Notes = table.Column<string>(type: "text", nullable: true),
                CreatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UpdatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: true)
            },
            constraints: table =>
            {
                table.PrimaryKey("PK_sales_forecasts", x => x.Id);
                table.ForeignKey(
                    name: "FK_sales_forecasts_clients_ClientId",
                    column: x => x.ClientId,
                    principalTable: "clients",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.Cascade);
            });

        migrationBuilder.CreateTable(
            name: "recommendations",
            columns: table => new
            {
                Id = table.Column<Guid>(type: "uuid", nullable: false),
                ClientId = table.Column<Guid>(type: "uuid", nullable: false),
                ProductId = table.Column<Guid>(type: "uuid", nullable: false),
                RecommendationDateUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                Score = table.Column<decimal>(type: "numeric(10,4)", precision: 10, scale: 4, nullable: false),
                Reason = table.Column<string>(type: "text", nullable: true),
                Status = table.Column<string>(type: "text", nullable: false),
                CreatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UpdatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: true)
            },
            constraints: table =>
            {
                table.PrimaryKey("PK_recommendations", x => x.Id);
                table.ForeignKey(
                    name: "FK_recommendations_clients_ClientId",
                    column: x => x.ClientId,
                    principalTable: "clients",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.Cascade);
                table.ForeignKey(
                    name: "FK_recommendations_products_ProductId",
                    column: x => x.ProductId,
                    principalTable: "products",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.Restrict);
            });

        migrationBuilder.CreateTable(
            name: "users",
            columns: table => new
            {
                Id = table.Column<Guid>(type: "uuid", nullable: false),
                FirstName = table.Column<string>(type: "text", nullable: false),
                LastName = table.Column<string>(type: "text", nullable: false),
                Email = table.Column<string>(type: "text", nullable: false),
                Phone = table.Column<string>(type: "character varying(30)", maxLength: 30, nullable: true),
                Status = table.Column<string>(type: "character varying(50)", maxLength: 50, nullable: false),
                RoleId = table.Column<Guid>(type: "uuid", nullable: false),
                CreatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UpdatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: true)
            },
            constraints: table =>
            {
                table.PrimaryKey("PK_users", x => x.Id);
                table.ForeignKey(
                    name: "FK_users_roles_RoleId",
                    column: x => x.RoleId,
                    principalTable: "roles",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.Restrict);
            });

        migrationBuilder.CreateTable(
            name: "deals",
            columns: table => new
            {
                Id = table.Column<Guid>(type: "uuid", nullable: false),
                ClientId = table.Column<Guid>(type: "uuid", nullable: false),
                UserId = table.Column<Guid>(type: "uuid", nullable: true),
                PurchaseAmount = table.Column<decimal>(type: "numeric(18,2)", precision: 18, scale: 2, nullable: false),
                PurchaseDateUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                Season = table.Column<string>(type: "character varying(50)", maxLength: 50, nullable: false),
                PaymentMethod = table.Column<string>(type: "character varying(100)", maxLength: 100, nullable: false),
                DiscountApplied = table.Column<bool>(type: "boolean", nullable: false),
                PromoCodeUsed = table.Column<bool>(type: "boolean", nullable: false),
                ReviewRating = table.Column<decimal>(type: "numeric(3,2)", precision: 3, scale: 2, nullable: false),
                ShippingType = table.Column<string>(type: "character varying(100)", maxLength: 100, nullable: true),
                CreatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UpdatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: true)
            },
            constraints: table =>
            {
                table.PrimaryKey("PK_deals", x => x.Id);
                table.ForeignKey(
                    name: "FK_deals_clients_ClientId",
                    column: x => x.ClientId,
                    principalTable: "clients",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.Restrict);
                table.ForeignKey(
                    name: "FK_deals_users_UserId",
                    column: x => x.UserId,
                    principalTable: "users",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.SetNull);
            });

        migrationBuilder.CreateTable(
            name: "activities",
            columns: table => new
            {
                Id = table.Column<Guid>(type: "uuid", nullable: false),
                Type = table.Column<string>(type: "text", nullable: false),
                Subject = table.Column<string>(type: "text", nullable: true),
                Description = table.Column<string>(type: "text", nullable: true),
                ActivityDateUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UserId = table.Column<Guid>(type: "uuid", nullable: true),
                ClientId = table.Column<Guid>(type: "uuid", nullable: false),
                DealId = table.Column<Guid>(type: "uuid", nullable: true),
                CreatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UpdatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: true)
            },
            constraints: table =>
            {
                table.PrimaryKey("PK_activities", x => x.Id);
                table.ForeignKey(
                    name: "FK_activities_clients_ClientId",
                    column: x => x.ClientId,
                    principalTable: "clients",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.Restrict);
                table.ForeignKey(
                    name: "FK_activities_deals_DealId",
                    column: x => x.DealId,
                    principalTable: "deals",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.SetNull);
                table.ForeignKey(
                    name: "FK_activities_users_UserId",
                    column: x => x.UserId,
                    principalTable: "users",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.SetNull);
            });

        migrationBuilder.CreateTable(
            name: "deal_items",
            columns: table => new
            {
                Id = table.Column<Guid>(type: "uuid", nullable: false),
                DealId = table.Column<Guid>(type: "uuid", nullable: false),
                ProductId = table.Column<Guid>(type: "uuid", nullable: false),
                Quantity = table.Column<decimal>(type: "numeric(18,3)", precision: 18, scale: 3, nullable: false),
                UnitPrice = table.Column<decimal>(type: "numeric(18,2)", precision: 18, scale: 2, nullable: false),
                TotalPrice = table.Column<decimal>(type: "numeric(18,2)", precision: 18, scale: 2, nullable: false),
                CreatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UpdatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: true)
            },
            constraints: table =>
            {
                table.PrimaryKey("PK_deal_items", x => x.Id);
                table.ForeignKey(
                    name: "FK_deal_items_deals_DealId",
                    column: x => x.DealId,
                    principalTable: "deals",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.Cascade);
                table.ForeignKey(
                    name: "FK_deal_items_products_ProductId",
                    column: x => x.ProductId,
                    principalTable: "products",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.Restrict);
            });

        migrationBuilder.CreateTable(
            name: "task_items",
            columns: table => new
            {
                Id = table.Column<Guid>(type: "uuid", nullable: false),
                Title = table.Column<string>(type: "text", nullable: false),
                Description = table.Column<string>(type: "text", nullable: true),
                DueDateUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                Status = table.Column<string>(type: "text", nullable: false),
                AssignedToUserId = table.Column<Guid>(type: "uuid", nullable: false),
                ClientId = table.Column<Guid>(type: "uuid", nullable: false),
                DealId = table.Column<Guid>(type: "uuid", nullable: true),
                CreatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: false),
                UpdatedAtUtc = table.Column<DateTime>(type: "timestamp with time zone", nullable: true)
            },
            constraints: table =>
            {
                table.PrimaryKey("PK_task_items", x => x.Id);
                table.ForeignKey(
                    name: "FK_task_items_clients_ClientId",
                    column: x => x.ClientId,
                    principalTable: "clients",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.Restrict);
                table.ForeignKey(
                    name: "FK_task_items_deals_DealId",
                    column: x => x.DealId,
                    principalTable: "deals",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.SetNull);
                table.ForeignKey(
                    name: "FK_task_items_users_AssignedToUserId",
                    column: x => x.AssignedToUserId,
                    principalTable: "users",
                    principalColumn: "Id",
                    onDelete: ReferentialAction.SetNull);
            });

        migrationBuilder.CreateIndex(
            name: "IX_activities_ClientId",
            table: "activities",
            column: "ClientId");

        migrationBuilder.CreateIndex(
            name: "IX_activities_DealId",
            table: "activities",
            column: "DealId");

        migrationBuilder.CreateIndex(
            name: "IX_activities_UserId",
            table: "activities",
            column: "UserId");

        migrationBuilder.CreateIndex(
            name: "IX_clients_ExternalId",
            table: "clients",
            column: "ExternalId",
            unique: true);

        migrationBuilder.CreateIndex(
            name: "IX_deal_items_DealId_ProductId",
            table: "deal_items",
            columns: new[] { "DealId", "ProductId" });

        migrationBuilder.CreateIndex(
            name: "IX_deal_items_ProductId",
            table: "deal_items",
            column: "ProductId");

        migrationBuilder.CreateIndex(
            name: "IX_deals_ClientId",
            table: "deals",
            column: "ClientId");

        migrationBuilder.CreateIndex(
            name: "IX_deals_PurchaseDateUtc",
            table: "deals",
            column: "PurchaseDateUtc");

        migrationBuilder.CreateIndex(
            name: "IX_deals_UserId",
            table: "deals",
            column: "UserId");

        migrationBuilder.CreateIndex(
            name: "IX_products_Name_Category_Color_Size",
            table: "products",
            columns: new[] { "Name", "Category", "Color", "Size" });

        migrationBuilder.CreateIndex(
            name: "IX_recommendations_ClientId",
            table: "recommendations",
            column: "ClientId");

        migrationBuilder.CreateIndex(
            name: "IX_recommendations_ProductId",
            table: "recommendations",
            column: "ProductId");

        migrationBuilder.CreateIndex(
            name: "IX_roles_Name",
            table: "roles",
            column: "Name",
            unique: true);

        migrationBuilder.CreateIndex(
            name: "IX_sales_forecasts_ClientId",
            table: "sales_forecasts",
            column: "ClientId");

        migrationBuilder.CreateIndex(
            name: "IX_sales_forecasts_ClientId_ForecastDateUtc",
            table: "sales_forecasts",
            columns: new[] { "ClientId", "ForecastDateUtc" });

        migrationBuilder.CreateIndex(
            name: "IX_task_items_AssignedToUserId",
            table: "task_items",
            column: "AssignedToUserId");

        migrationBuilder.CreateIndex(
            name: "IX_task_items_ClientId",
            table: "task_items",
            column: "ClientId");

        migrationBuilder.CreateIndex(
            name: "IX_task_items_DealId",
            table: "task_items",
            column: "DealId");

        migrationBuilder.CreateIndex(
            name: "IX_users_Email",
            table: "users",
            column: "Email",
            unique: true);

        migrationBuilder.CreateIndex(
            name: "IX_users_RoleId",
            table: "users",
            column: "RoleId");
    }

    /// <inheritdoc />
    protected override void Down(MigrationBuilder migrationBuilder)
    {
        migrationBuilder.DropTable(
            name: "activities");

        migrationBuilder.DropTable(
            name: "deal_items");

        migrationBuilder.DropTable(
            name: "recommendations");

        migrationBuilder.DropTable(
            name: "sales_forecasts");

        migrationBuilder.DropTable(
            name: "task_items");

        migrationBuilder.DropTable(
            name: "products");

        migrationBuilder.DropTable(
            name: "deals");

        migrationBuilder.DropTable(
            name: "clients");

        migrationBuilder.DropTable(
            name: "users");

        migrationBuilder.DropTable(
            name: "roles");
    }
}
